[tool.poetry]
name = "mimirpy"
version = "0.1.0"
description = "A python tls test suite"
authors = ["Andre Guerra <agu3rra@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
async-timeout = "^4.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
bandit = "^1.7.5"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mimir = "mimirpy.command:main"
